2013-05-11  Per Bothner  <per@bothner.com>

	* PrimProcedure.java (methodForInvoke): New field.  Use this Method
	for code-generation, whiling using 'method' field for type-checking.
	This fixes Savannah bug #38890 "Wrong more than one
	applicable method warning".
	(setMethodForInvoke, setOpcode): New methods.

	* PrimProcedure.java: Make various fields private.
	* LambdaExp.java (checkForInitCall): Use PrimProcedure#getMethod.

2013-05-06  Per Bothner  <per@bothner.com>

	* ChainLambdas.java (visitApplyExp): Fix thinko - incorrect
	local variable re-use failed to suppress unwanted diagnostic.

2013-03-28  Per Bothner  <per@bothner.com>

	Refactor the data structures used by the can-finish analysis.
	The basic algorithm is the same, but the new data structure uses
	much less memory: Instead of a set (Arraylist) of a set (HashSet)
	of LambdaExp, we have a Map from a LambdaExp to set, where the
	set is compactly represented by an IntNum.
	* CanFinishMap.java: New class - basically a map from LambdaExp
	to a bitstring.
	* Makefile.am: Add new file.
	* LambdaExp.java (CAN_FINISH, CANNOT_FINISH): Moved to CanFinishMap.
	* LambdaExp.java: Update for some logic moved to CanFinishMap.
	* PushApply.java: Likewise.
	* InlineCalls.java: Likewise.

2013-03-23  Per Bothner  <per@bothner.com>

	* ClassExp.java (declareParts): Fix logic error with modifiers.

2013-03-04  Per Bothner  <per@bothner.com>

	* InlineCalls.java (inlineCall): Fix missing noteValueFromLet
	call in varArgs case.  Also generalize varArgs case to
	arbitrary (not just zero) fixed args.

2013-02-24  Per Bothner  <per@bothner.com>

	* InlineCalls.java (ValueNeededType:make): If required type is
	explicitly specified as Object, then don't warn about void expressions.
	(visitSetExp): Update to call ValueNeededType.make.

2013-02-23  Per Bothner  <per@bothner.com>

	Add/improve warnings for using void-valued expressions.
	* InlineCalls.java (class ValueNeededType): New helper class.